# mcp-server

./: LICENSE  README.md  SKILL.md  pyproject.toml
dbschenker_server/: exceptions.py  mcp_server.py  pyproject.toml
resources/: claude_desktop_config.json
src/dbschenker_mcp_server/: mcp_server.py
src/dbschenker_server/: mcp_server.py
